--- a/loops/PY0101EN-3-2-Loops.ipynb
+++ b/loops/PY0101EN-3-2-Loops.ipynb
@@ -666,9 +666,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['orange', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
@@ -676,7 +684,8 @@
     "new_squares = []\n",
     "i = 0\n",
     "while (i<len(squares) and squares[i]==\"orange\"):\n",
-    "    new_squares.append(square)\n",
+    "    new_squares.append(squares[i])\n",
+    "    i+=1\n",
     "    \n",
     "print(new_squares)"
    ]
